--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.2",
     "ckeditor5": "^42.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "html-react-parser": "^5.1.16",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
