updated env files

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 VITE_APP_ENV=production
-VITE_API_URL=https://betbaba-blog-api.onrender.com/
+VITE_API_URL=https://betbaba-blog-api.onrender.com/api/v1/
+VITE_PHOTO_PATH=https://betbaba-blog-api.onrender.com/img/topics/
