--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.22.3",
     "react-social-icons": "^6.14.0",
     "react-toastify": "^10.0.5",
