--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^6.22.3",
     "react-social-icons": "^6.14.0",
     "react-toastify": "^10.0.5",
-    "rss-to-json": "^2.1.1"
+    "rss-to-json": "^2.1.1",
+    "sitemap": "^8.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
