--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.0.1",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.22.3",
+    "react-share": "^5.1.1",
     "react-social-icons": "^6.14.0",
     "react-toastify": "^10.0.5",
     "rss-to-json": "^2.1.1",
